# gst-chessboard

./: Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
m4/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  gstchessfind.c  gstchessfind.h
src/.deps/: libgstchessfind_la-gstchessfind.Plo
